--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "Oskar Niburski <oskarniburski@gmail.com> (http://raksonibs.github.io)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^2.0.1",
+    "path": "^0.12.7",
+    "q": "^1.4.1",
+    "requirejs": "^2.2.0",
+    "underscore": "^1.8.3"
+  }
 }
