--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ember-erd",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha --report test test",
     "ember-erd": "node index.js"
   },
- "bin": {
-      "ember-erd": "index.js"
+  "bin": {
+    "ember-erd": "bin/index.js"
   },
   "keywords": [],
   "author": "Oskar Niburski <oskarniburski@gmail.com> (http://raksonibs.github.io)",
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "q": "^1.4.1",
     "requirejs": "^2.2.0",
+    "shelljs": "^0.7.3",
     "underscore": "^1.8.3"
   }
 }
