--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-erd",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "async": "^2.0.1",
     "mocha": "^3.0.2",
     "path": "^0.12.7",
+    "pluralize": "^3.0.0",
     "q": "^1.4.1",
     "requirejs": "^2.2.0",
     "shelljs": "^0.7.3",
